adding ssh keys to jenkins and persisting data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,4 @@
 version: '3.7'
-
 services:
   jenkins:
     build:
@@ -8,6 +7,8 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
+      - ./ssh_keys/id_rsa:/var/jenkins_home/.ssh/id_rsa
+      - ./ssh_keys/id_rsa.pub:/var/jenkins_home/.ssh/id_rsa.pub
     ports:
         - 8080:8080
 volumes:
