updating ssh keys folder

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
     volumes:
       - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
-      - ~/.ssh/:/var/jenkins_home/.ssh
+      - ./ssh_keys:/var/ssh_keys
     ports:
         - 8080:8080
 volumes:
