--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,10 +5,10 @@ services:
       context: ./
       dockerfile: Dockerfile
     volumes:
-      # - jenkins-data:/var/jenkins_home
+      - jenkins-data:/var/jenkins_home
       - /var/run/docker.sock:/var/run/docker.sock
       - ./ssh_keys:/var/ssh_keys
     ports:
         - 8080:8080
-# volumes:
-#   jenkins-data:
+volumes:
+  jenkins-data:
